# people

./: .gitattributes  .gitignore  .sops.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  desk-0.0.2.tgz  desk-0.0.3.tgz  desk-0.0.4.tgz  desk-0.0.5.tgz  desk-0.0.6.tgz  desk-0.0.7.tgz  docker-compose.yml  index.yaml  renovate.json
docs/: i18n.md  (+4 more)
src/backend/: conftest.py  pyproject.toml
src/backend/admin/: registry.py  sites.py  views.py
src/backend/admin/templates/selftest/: base.html  email.html  index.html
src/backend/core/: admin.py  apps.py  enums.py  factories.py  models.py  tasks.py
src/backend/core/api/: permissions.py
src/backend/core/api/client/: serializers.py  viewsets.py
src/backend/core/api/resource_server/: serializers.py  viewsets.py
src/backend/core/authentication/: backends.py
src/backend/core/carddav/: auth.py  collection.py  rights.py  storage.py  urls.py  views.py
src/backend/core/jsonschema/fr/: organization_metadata.json
src/backend/core/management/: __init__.py
src/backend/core/management/commands/: fill_organization_metadata.py  list_plugins.py
src/backend/core/migrations/: 0010_team_depth_team_numchild_team_path_and_more.py  0011_contact_dn_vcard_data.py  0011_organization_metadata.py  0011_team_is_visible_all_services.py  0012_organization_metadata.py  0013_organization_is_active.py  0014_accountservice.py  0015_alter_accountservice_api_key.py  0016_team_external_id_alter_team_users.py  0016_teamwebhook_protocol.py  0017_teamwebhook_protocol.py
src/backend/core/plugins/: base.py  registry.py  urls.py
src/backend/core/resource_server/: authentication.py  backend.py
src/backend/core/tests/: test_api_config.py  test_api_stats.py  test_api_team_invitations.py  test_management_command_tasks.py  test_models_account_services.py  test_models_contacts.py  test_models_invitations.py  test_models_organizations.py  test_models_team_accesses.py  test_password_validators.py  test_tasks.py
src/backend/core/tests/authentication/: test_backends.py
src/backend/core/tests/contacts/: test_core_api_contacts_update.py
src/backend/core/tests/fixtures/: matrix.py
src/backend/core/tests/jsonschema/: __init__.py  test_schema.py
src/backend/core/tests/management_commands/: __init__.py  test_fill_organization_metadata.py
src/backend/core/tests/resource_server/: test_authentication.py  test_backend.py
src/backend/core/tests/resource_server_api/: conftest.py
src/backend/core/tests/swagger/: test_openapi_schema.py
src/backend/core/tests/team_accesses/: test_api_team_accesses_create.py  test_api_team_accesses_delete.py
src/backend/core/tests/teams/: test_core_api_teams_create.py  test_core_api_teams_list.py  test_core_api_teams_retrieve.py  test_core_api_teams_update.py
src/backend/core/tests/users/: test_api_users_list.py  test_api_users_retrieve.py
src/backend/core/tests/utils/: test_json_schema.py  test_webhooks_matrix_client.py  test_webhooks_scim_client.py
src/backend/core/utils/: io.py  json_schema.py  matrix.py  scim.py  webhooks.py
src/backend/debug/: urls.py  views.py
src/backend/demo/: defaults.py  forms.py  urls.py  views.py
src/backend/demo/management/commands/: create_demo.py
src/backend/demo/templates/demo/: token_exchange_form.html
src/backend/demo/tests/: test_commands_create_demo.py
src/backend/locale/en_US/LC_MESSAGES/: django.mo  django.po
src/backend/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
src/backend/mailbox_manager/: admin.py  apps.py  enums.py  exceptions.py  factories.py  models.py  signals.py  tasks.py  urls.py
src/backend/mailbox_manager/api/: permissions.py
src/backend/mailbox_manager/migrations/: 0016_alter_mailbox_domain.py  0017_alter_maildomain_status.py  0018_domaininvitation.py  0018_fix_mailboxes_status.py  0018_maildomain_organization.py  0018_maildomain_support_email.py  0019_maildomain_last_check_details.py  0020_alter_mailbox_options_alter_maildomain_options_and_more.py  0020_domaininvitation.py  0020_maildomain_organization.py  0021_maildomain_expected_config.py  0022_maildomain_organization.py  0023_mailbox_email_mailbox_last_login_mailbox_password.py  0024_domaininvitation.py  0025_alter_mailbox_secondary_email.py  0026_alias.py  0026_alter_mailbox_unique_together_and_more.py  0027_alias.py  0027_remove_mailbox_unique_ox_display_name_and_more.py  0028_alias.py  0029_alter_alias_unique_together_alias_no_duplicate.py  0030_alter_mailbox_options_remove_mailbox_unique_username.py  0031_functionalmailbox.py
src/backend/mailbox_manager/tests/: conftest.py  numerique.gouv.json  test_admin_actions.py  test_password_validators.py  test_tasks.py  test_utils_dimail_client.py
src/backend/mailbox_manager/utils/: dimail.py
src/backend/mailbox_oauth2/: __init__.py  backends.py  middleware.py  models.py  serializers.py  urls.py  validators.py  views.py
src/backend/mailbox_oauth2/migrations/: 0001_initial.py
src/backend/mailbox_oauth2/tests/: __init__.py  test_backends.py  test_middleware.py  test_validators.py  test_views.py
src/backend/people/: __init__.py  api_urls.py  resource_server_urls.py  settings.py  urls.py
src/backend/plugins/: organizations.py
src/backend/plugins/la_suite/: __init__.py  admin.py  apps.py  authentication.py  factories.py  hooks.py  models.py  serializers.py  throttle.py  urls.py  views.py
src/backend/scim_importer/: adapters.py  admin.py  apps.py  authentication.py  filters.py  models.py  utils.py
src/backend/scim_importer/migrations/: 0001_initial.py
src/backend/scim_importer/tests/: __init__.py
src/backend/token_exchange/: __init__.py  admin.py  apps.py  authentication.py  factories.py  models.py  permissions.py  serializers.py  tasks.py  token_generator.py  urls.py  views.py
src/backend/token_exchange/management/: __init__.py
src/backend/token_exchange/migrations/: 0001_initial.py  __init__.py
src/backend/token_exchange/tests/: __init__.py  helpers.py  test_cleanup_tokens.py  test_models.py  test_token_exchange.py  test_token_introspection.py  test_token_limit.py  test_token_revocation.py
(+384 files in other folders)
